# Codex-Collaboration-Coordinator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BORROWED_IDEAS.md  DB_SCHEMA.md  Dockerfile  IMPLEMENTATION_ORDER.md  IMPLEMENTATION_ORDER_V2.md  IMPLEMENTATION_ORDER_V3.md  IMPLEMENTATION_ORDER_V4.md  IMPLEMENTATION_ORDER_V5.md  IMPLEMENTATION_ORDER_V6.md  IMPLEMENTATION_TASKS.md  IMPLEMENTATION_TASKS_V2.md  IMPLEMENTATION_TASKS_V3.md  IMPLEMENTATION_TASKS_V4.md  IMPLEMENTATION_TASKS_V5.md  IMPLEMENTATION_TASKS_V6.md  PLAN.md  PLAN_V2.md  PLAN_V3.md  PLAN_V4.md  PLAN_V5.md  PLAN_V6.md  README.md  STATUS.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  a2a_adapter.py  a2a_events.py  a2a_placeholder.py  a2a_public.py  agents.py  approvals.py  artifacts.py  channels.py  dependencies.py  health.py  integration_credentials.py  jobs.py  messages.py  operator_actions.py  operator_dashboard.py  operator_realtime.py  operator_ui.py  orchestration.py  outbound_webhooks.py  participants.py  phases.py  policies.py  (+7 more)
docs/: A2A_COMPATIBILITY_MATRIX.md  A2A_MAPPING.md  A2A_PUBLIC_API.md  A2A_PUBLIC_EVENTS.md  A2A_QUICKSTART.md  DEPLOYMENT.md  LOCAL_SETUP.md  OBSERVABILITY.md  OPERATOR_UI.md  POLICY_ENGINE_V2.md  README.md  RELEASE_NOTES_MVP.md  RELEASE_NOTES_V5.md  RUNBOOK.md  RUNTIME_POOLS.md  TROUBLESHOOTING.md  UPGRADE_NOTES_V4.md
scripts/: README.md  a2a_conformance.ps1  a2a_quickstart.ps1  context_pack.ps1  dev.ps1  docs_check.ps1  lint.ps1  package_release.ps1  release.ps1  run.ps1  seed.ps1  smoke.ps1
ui/: index.html
(+263 files in other folders)
