[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-collaboration-coordinator"
version = "0.1.0"
description = "Codex Collaboration Coordinator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.db.migrations" = ["*.sql"]
